# ek-tm4c1294xl

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  TM4C1294NCPDT.jflash  arm-none-eabi-gcc-cortex-m4.cmake  gdbinit-reset.py  gdbinit.py
.clion/: firmware.elf _ GDB Server _ Run.run.xml
runcfg/: gdbinit-reset.py.run.xml
src/: firmware.ld
src/drv/: display_kentec_boostxl_k350qvg_s1_ssd2119_spi.c  display_kentec_boostxl_k350qvg_s1_ssd2119_spi.h  tm4c129.c  tm4c129.h  tm4c129_ccm.c  tm4c129_ccm.h  tm4c129_dma.c  tm4c129_dma.h  tm4c129_eeprom.c  tm4c129_eeprom.h  tm4c129_eth.c  tm4c129_eth.h  tm4c129_flash.c  tm4c129_flash.h  tm4c129_int.c  tm4c129_int.h  tm4c129_mcu.c  tm4c129_mcu.h  tm4c129_spi.c  tm4c129_spi.h  tm4c129_tmr.c  tm4c129_tmr.h  tm4c129_uart_dbg.c  tm4c129_uart_dbg.h  tm4c129_uart_esp.c  tm4c129_uart_esp.h
src/drv/tivaware/: tivaware.h
src/drv/tivaware/driverlib/: adc.c  adc.h  aes.c  aes.h  can.c  can.h  comp.c  comp.h  cpu.c  cpu.h  crc.c  crc.h  debug.h  des.c  des.h  eeprom.c  eeprom.h  emac.c  emac.h  epi.c  epi.h  flash.c  flash.h  fpu.c  fpu.h  gpio.c  gpio.h  hibernate.c  hibernate.h  i2c.c  i2c.h  interrupt.c  interrupt.h  lcd.c  lcd.h  mpu.c  mpu.h  onewire.c  onewire.h  pin_map.h  (+27 more)
src/drv/tivaware/inc/: asmdefs.h  hw_adc.h  hw_aes.h  hw_can.h  hw_ccm.h  hw_comp.h  hw_des.h  hw_eeprom.h  hw_emac.h  hw_epi.h  hw_flash.h  hw_gpio.h  hw_hibernate.h  hw_i2c.h  hw_ints.h  hw_lcd.h  hw_memmap.h  hw_nvic.h  hw_onewire.h  hw_pwm.h  hw_qei.h  hw_shamd5.h  hw_ssi.h  hw_sysctl.h  hw_sysexc.h  hw_timer.h  hw_types.h  hw_uart.h  hw_udma.h  hw_usb.h  hw_watchdog.h  tm4c1294ncpdt.h
src/firmware/: tn_app_init.c
src/hal/: hal.c  hal.h  hal_block_io.c  hal_block_io.h  hal_con.c  hal_con.h  hal_crt.c  hal_crt.h  hal_def.h  hal_def_arch.h  hal_init.c  hal_init.h  hal_mm.h  hal_tls.c  hal_tls.h  hal_version.c  hal_version.h
src/lib/: conv.c  conv.h  crc16_ccitt_soft.c  crc16_ccitt_soft.h  crc32_mpeg_soft.c  crc32_mpeg_soft.h  ring_buf.c  ring_buf.h
src/lib/grlib/: canvas.c  canvas.h  charmap.c  checkbox.c  checkbox.h  circle.c  container.c  container.h  context.c  grlib.h  image.c  imgbutton.c  imgbutton.h  keyboard.c  keyboard.h  line.c  listbox.c  listbox.h  offscr1bpp.c  offscr4bpp.c  offscr8bpp.c  pushbutton.c  pushbutton.h  radiobutton.c  radiobutton.h  rectangle.c  slider.c  slider.h  string.c  widget.c  widget.h
src/lib/grlib/fonts/: fontcm12.c  fontcm12b.c  fontcm12i.c  fontcm14.c  fontcm14b.c  fontcm14i.c  fontcm16.c  fontcm16b.c  fontcm16i.c  fontcm18.c  fontcm18b.c  fontcm18i.c  fontcm20.c  fontcm20b.c  fontcm20i.c  fontcm22.c  fontcm22b.c  fontcm22i.c  fontcm24.c  fontcm24b.c  fontcm24i.c  fontcm26.c  fontcm26b.c  fontcm26i.c  fontcm28.c  fontcm28b.c  fontcm28i.c  fontcm30.c  fontcm30b.c  fontcm30i.c  fontcm32.c  fontcm32b.c  fontcm32i.c  fontcm34.c  fontcm34b.c  fontcm34i.c  fontcm36.c  fontcm36b.c  fontcm36i.c  fontcm38.c  (+113 more)
src/lib/libc/arch/arm/bits/: alltypes.h  stdint.h
src/lib/libc/arch/generic/: fp_arch.h
src/lib/libc/arch/generic/bits/: errno.h  limits.h
src/lib/libc/ctype/: tolower.c  toupper.c
src/lib/libc/errno/: __errno.c  __strerror.h  strerror.c
src/lib/libc/exit/: _Exit.c  abort.c  assert.c  exit.c
src/lib/libc/include/: alloca.h  assert.h  ctype.h  endian.h  errno.h  features.h  float.h  inttypes.h  langinfo.h  libc.h  limits.h  locale.h  nl_types.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  threads.h  time.h  unistd.h
src/lib/libc/internal/: features.h  floatscan.c  floatscan.h  intscan.c  intscan.h  libc.c  libm.h  lock.h  math.h  shgetc.c  shgetc.h  stdio.h  stdio_impl.h  stdlib.h  string.h  time.h
src/lib/libc/locale/: langinfo.c
src/lib/libc/malloc/: malloc.c
src/lib/libc/math/: copysign.c  fabs.c  fmodl.c  frexp.c  frexpl.c  scalbn.c
src/lib/libc/prng/: rand.c
src/lib/libc/stdio/: __lockfile.c  __overflow.c  __stdio_read.c  __stdio_write.c  __toread.c  __towrite.c  __uflow.c  clearerr.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fprintf.c  fputc.c  fputs.c  fread.c  fscanf.c  fwrite.c  getc.c  getc.h  gets.c  perror.c  printf.c  putc.c  putc.h  puts.c  scanf.c  setbuf.c  setvbuf.c  snprintf.c  sprintf.c  sscanf.c  stderr.c  stdin.c  stdout.c  ungetc.c  vfprintf.c  vfscanf.c  vscanf.c  (+3 more)
src/lib/libc/stdlib/: atof.c  atoi.c  atol.c  atoll.c  bsearch.c  div.c  imaxabs.c  imaxdiv.c  itoa.c  labs.c  ldiv.c  llabs.c  lldiv.c  qsort.c  qsort_nr.c  strtod.c  strtol.c  utoa.c
src/lib/libc/string/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memrchr.c  memset.c  stpcpy.c  stpncpy.c  strcasecmp.c  strcasestr.c  strcat.c  strchrnul.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strncasecmp.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
src/lib/libc/time/: __month_to_secs.c  __secs_to_tm.c  __tm_to_secs.c  __year_to_secs.c  asctime.c  asctime_r.c  clock.c  clock_gettime.c  ctime.c  ctime_r.c  gmtime.c  gmtime_r.c  localtime.c  localtime_r.c  mktime.c  strftime.c  strptime.c  time.c  time_impl.h
src/lib/tnkernel/: tn.c  tn.h  tn_alloc.c  tn_dqueue.c  tn_event.c  tn_mailbox.c  tn_mem.c  tn_mutex.c  tn_sem.c  tn_sys.c  tn_task.c  tn_timer.c  tn_utils.c  tn_utils.h
src/lib/tnkernel/arch/: tn_arch.h  tn_arch_CortexM0_M7.S  tn_arch_CortexM0_M7.c
